<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    android:id="@+id/main"
    tools:context=".Onboarding2Fragment">

    <ImageView
        android:id="@+id/onboardingImage3"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/location_image"
        android:src="@drawable/splash3" />

    <TextView
        android:id="@+id/onboardingText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/onboardingImage3"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:text="@string/enable_location_to_see_books"
        android:textSize="18sp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnEnableLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/onboardingText3"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/enable_location"
        android:textColor="@color/white"
        android:backgroundTint="@color/black" />

    <Button
        android:id="@+id/btnNext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="162dp"
        android:layout_marginBottom="44dp"
        android:text="@string/next"
        android:textColor="@color/black" />

</RelativeLayout>
